# VoxelTrace

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp  raytracer.cpp  raytracer.h  scene.cpp  scene.h
Project_sol/: GraphicsLabProj.sln
Project_sol/MainApp/: Hellotriangle.vcxproj
Project_sol/Octree/: Octree.vcxproj  Octree.vcxproj.filters
Report/: times.eps  voxeltrace_paper.tex  voxeltrace_paper_bibliography.bib  voxeltrace_paper_body.tex
datastructures/: 3d_prims.h  octree.h  voxelspace.cpp  voxelspace.h
include/: ogt_vox.h  tiny_obj_loader.h
include/GEL/doc/html/: AttributeVector_8h_source.html  Camera_8h_source.html  Circulators_8h_source.html  ConnectivityKernel_8h_source.html  DynCon_8h_source.html  GEL_2Geometry_2Graph_8h_source.html  GEL_2HMesh_2Manifold_8h_source.html  HMesh_2obj__load_8h_source.html  HMesh_8h_source.html  Implicit_8h_source.html  ItemID_8h_source.html  ItemVector_8h_source.html  Iterators_8h_source.html  MeshEditor_8h_source.html  PyGEL_2Manifold_8h_source.html  Range_8h_source.html  Serialization_8h_source.html  SphereDelaunay_8h_source.html  VisObj_8h_source.html  Walker_8h_source.html  XForm_8h_source.html  annotated.html  classGLGraphics_1_1VisObj-members.html  classGLGraphics_1_1VisObj.html  classGeometry_1_1AMGraph3D-members.html  classGeometry_1_1AMGraph3D.html  classGeometry_1_1BreadthFirstSearch-members.html  classGeometry_1_1BreadthFirstSearch.html  classGeometry_1_1DynCon-members.html  classGeometry_1_1DynCon.html  classGeometry_1_1GraphDist-members.html  classGeometry_1_1GraphDist.html  classGeometry_1_1XForm-members.html  classGeometry_1_1XForm.html  classHMesh_1_1AttributeVector-members.html  classHMesh_1_1AttributeVector.html  classHMesh_1_1ConnectivityKernel-members.html  classHMesh_1_1ConnectivityKernel.html  classHMesh_1_1FaceAttributeVector-members.html  classHMesh_1_1FaceAttributeVector.html  (+59 more)
models/: temple.vox  town.vox
shaders/: compile.bat  compile.sh  imgui.ini  raytrace.frag  raytrace.frag.md5  raytrace.vert.md5  shader.vert.md5  voxeltrace.frag  voxeltrace.frag.md5  voxeltrace.vert  voxeltrace_bits.frag  voxeltrace_depth.frag  voxeltrace_floats.frag  voxeltrace_floats.frag.md5
src/: 3d_prims.h  CMakeLists.txt  IOHandler.cpp  IOHandler.hpp  helpers.hpp  main.cpp  octest.cpp  octree.h  raytrace.vert  scene.cpp  scene.h  voxelspace.h
